<resources>
    <string name="app_name">My Application</string>
    <string name="titleNhaptien">Nhập tiền đang có</string>
    <string name="Nhap_tien">Nhập vào số tiền</string>
    <string name="Ghi">Ghi</string>
    <string name="Muc_chi">Mục chi</string>
    <string name="Dien_giai">Diễn giải</string>
    <string name="Tu_tai_khoan">Từ tài khoản</string>
    <string name="Su_kien">Sự kiện</string>
    <string name="Huy">Hủy</string>
    <string name="Xong">Xong</string>
    <string name="Tai_khoan">Tài khoản</string>
    <string name="Tong">Tổng: </string>
    <string name="Con">Tiền còn:  </string>
    <string name="Hang_muc_thu">Hạng mục thu</string>
    <string name="Hang_muc_chi">Hạng mục chi</string>
    <string name="Chon_tai_khoan">Chọn tài khoản</string>
    <string name="GhiChep">Ghi chép</string>
    <string name="Them_tai_khoan">Thêm tài khoản</string>
    <string name="Ten">Tên</string>
    <string name="Loai_tai_khoan">Loại tài khoản</string>
    <string name="Loai_tien_ten">Loại tài khoản</string>
    <string name="So_tien_ban_dau">Số tiền ban đầu</string>
    <string name="Luu">Lưu</string>
    <string name="Ten_tai_khoan">Tên tài khoản</string>
    <string name="In_put">Input</string>
    <string name="so1">1</string>
    <string name="so2">2</string>
    <string name="so3">3</string>
    <string name="so4">4</string>
    <string name="so5">5</string>
    <string name="so6">6</string>
    <string name="so7">7</string>
    <string name="so8">8</string>
    <string name="so9">9</string>
    <string name="so0">0</string>
    <string name="Dau_bang">=</string>
    <string name="Dau_cham">.</string>
    <string name="AC">AC</string>
    <string name="Dau_nhan">*</string>
    <string name="Dau_chia">/</string>
    <string name="Dau_tru">-</string>
    <string name="Dau_cong">+</string>
    <string name="Chi_tien">Chi Tiền</string>
    <string name="Chon_ngay">Chọn ngày</string>
    <string name="Muc_thu">Mục thu</string>
    <string name="Back">Back</string>
    <string name="Thu_tien">Thu tiền</string>
    <string name="So_tien_thu">Số tiền thu</string>
    <string name="So_tien_chi">Số tiền chi</string>
    <string name="Sua">Sửa</string>
    <string name="Xoa">Xóa</string>
    <string name="Sua_tai_khoan">Sửa tài khoản</string>
    <string name="Vao_tai_khoan">Vào tài khoản</string>
    <string name="Danh_sach">Danh sách</string>
    <string name="Tien_chi">Tiền chi:</string>
    <string name="muc_chi">Mục chi:</string>
    <string name="dien_giai">Diễn giải:</string>
    <string name="su_kien">Sự kiện:</string>
    <string name="Tien_thu">Tiền thu:</string>
    <string name="Tao_hang_muc_khac">Tạo hạng mục khác</string>
    <string name="Ten_hang_muc_khac">Tên hạng mục khác: </string>
    <string name="Thong_ke">Thống kê</string>
    <string name="Nam">Năm</string>
    <string name="Thang">Tháng</string>
    <string name="Bao_cao">Báo cáo</string>
</resources>
