<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorTurquoise"
        android:id="@+id/Parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tao_hang_muc_khac"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/btnHuy_hang_muc_khac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_square"
            android:text="@string/Huy"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_alignParentLeft="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:text="@string/Ten_hang_muc_khac"/>

        <EditText
            android:id="@+id/edtHang_muc_khac"
            android:hint="Input name"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnXong_hang_muc_khac"
            android:layout_marginTop="40dp"
            android:text="@string/Xong"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_corners_color"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>