<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorTileNhaptien"
        android:id="@+id/Parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Them_tai_khoan"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

        <ImageButton
            android:id="@+id/imgBtn_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_square"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_alignParentLeft="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/custom_edit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTen_them_tai_khoan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Ten"
                android:textSize="20sp"
                android:layout_weight="6"/>
            <EditText
                android:id="@+id/edtTen_them_tai_khoan"
                android:hint="@string/Ten_tai_khoan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLoai_tai_khoan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Loai_tai_khoan"
                android:textSize="20sp"
                android:layout_weight="3"/>
            <TextView
                android:id="@+id/txtList_loai_tai_khoan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
            <ImageView
                android:id="@+id/imgLoai_tai_khoan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/So_tien_ban_dau"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_edit"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtSo_tien_ban_dau"
            android:hint="@string/So_tien_ban_dau"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="8"/>

        <ImageButton
            android:id="@+id/imgD"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLuu_them_tai_khoan"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Luu"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:background="@drawable/custom_boder_2" />
</LinearLayout>