<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorDarkCyan"
        android:id="@+id/Parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chon_tai_khoan"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/btnHuy_su_kien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_square"
            android:text="@string/Huy"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/btnXong_su_kien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_square"
            android:text="@string/Xong"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/list_chon_tai_khoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_edit">

    </ListView>

</LinearLayout>