<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundChung">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorTileNhaptien"
        android:id="@+id/Parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/Dien_giai"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>
        
        <Button
            android:id="@+id/btnHuy_dien_giai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_square"
            android:text="@string/Huy"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/btnXong_dien_giai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_square"
            android:text="@string/Xong"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_alignParentRight="true"/>
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/edtDienGiai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>