<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ActivityUpdateTaiKhoan">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorTurquoise"
        android:id="@+id/Parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sua_tai_khoan"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

        <ImageButton
            android:id="@+id/imgBtn_Back_update"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_alignParentLeft="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/custom_edit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Ten"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                android:layout_weight="6"/>

            <EditText
                android:id="@+id/edtTen_them_tai_khoan_up"
                android:hint="@string/Ten_tai_khoan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Loai_tai_khoan"
                android:textSize="20sp"
                android:layout_weight="3"/>
            <TextView
                android:id="@+id/txtDialog_loai_tai_khoan_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textSize="20sp"
                android:paddingTop="5dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/So_tien_ban_dau"
            android:textSize="20sp"/>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_edit"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtSo_tien_ban_dau_up"
            android:hint="@string/So_tien_ban_dau"
            android:textSize="30sp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"/>

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLuu_them_tai_khoan_up"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Sua"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:background="@drawable/custom_button_corners_color" />
</LinearLayout>