<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/colorTileNhaptien"
            android:id="@+id/Parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hang_muc_thu"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_centerInParent="true"/>

            <Button
                android:id="@+id/btnHuy_hang_muc_thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_square"
                android:text="@string/Huy"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_alignParentLeft="true"/>

            <Button
                android:id="@+id/btnXong_hang_muc_thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_square"
                android:text="@string/Xong"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <ListView
            android:id="@+id/list_hang_muc_thu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </ListView>

    </LinearLayout>

</ScrollView>