<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorGray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/colorTurquoise"
            android:id="@+id/Parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hang_muc_chi"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_centerInParent="true"/>

            <Button
                android:id="@+id/btnHuy_hang_muc_chi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_square"
                android:text="@string/Huy"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_alignParentLeft="true"/>

            <Button
                android:id="@+id/btnXong_hang_muc_chi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_square"
                android:text="@string/Xong"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/colorWhite">

            <Spinner
                android:id="@+id/spnHang_muc_chi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <ListView
                android:id="@+id/listviewHang_muc_chi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>